remove covert from deps, not sure how that got in there

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
   },
   "dependencies": {
     "generic-pool": "~2.0.2",
-    "once": "~1.1.1",
-    "covert": "~0.1.1"
+    "once": "~1.1.1"
   },
   "devDependencies": {
     "tape": "~2.3.2",
